Update Iterable according to spec

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -676,8 +676,8 @@ error.iterable.not.supported.collection=\
   incompatible types: ''{0}'' is not an iterable collection
 
 error.incompatible.iterator.function.signature=\
-  iterable objects must have a __iterator function with signature, ' \
-  public function __iterator() returns (object { public function next () returns (record {| T value; |}?); })';
+  iterable objects must have a iterator function with signature, ' \
+  public function iterator() returns (object { public function next () returns (record {| T value; |}?); })';
 
 error.iterable.not.supported.operation=\
   operation ''{0}'' does not support given collection type
@@ -1667,3 +1667,6 @@ error.invalid.readonly.field.type=\
 error.continue.not.allowed=continue not allowed here
 
 error.break.not.allowed=break not allowed here
+
+error.invalid.iterable.type=\
+  invalid iterable type ''{1}'': an iterable object must be subtypes of ''{0}''
