Change error message ForeachIterableObjectTest

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1671,5 +1671,5 @@ error.break.not.allowed=break not allowed here
 error.invalid.iterable.type=\
   invalid iterable type ''{1}'': an iterable object must be subtypes of ''{0}''
 
-error.invalid.iterable.completion.type.in.next.function=\
-  invalid iterable completion type ''{0}'': next method completion type cannot contain type ''{1}''
+error.invalid.iterable.completion.type.in.foreach.next.function=\
+  invalid completion type ''{0}'' in foreach statement: next method completion type cannot contain type ''{1}''
