Switch dependencies of __internal and lang.object

--- a/langlib/lang.config/build.gradle
+++ b/langlib/lang.config/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation project(':ballerina-runtime')
     implementation project(':ballerina-config')
     distributionBala project(path: ':ballerina-lang:annotations', configuration: 'distributionBala')
+    distributionBala project(path: ':ballerina-lang:object', configuration: 'distributionBala')
     distributionBala project(path: ':ballerina-lang:internal', configuration: 'distributionBala')
     distributionBala project(path: ':ballerina-lang:jballerina.java', configuration: 'distributionBala')
 }
