--- a/langlib/lang.xml/build.gradle
+++ b/langlib/lang.xml/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation project(':ballerina-lang:internal')
 
     distributionBala project(path: ':ballerina-lang:annotations', configuration: 'distributionBala')
+    distributionBala project(path: ':ballerina-lang:object', configuration: 'distributionBala')
     distributionBala project(path: ':ballerina-lang:internal', configuration: 'distributionBala')
     distributionBala project(path: ':ballerina-lang:jballerina.java', configuration: 'distributionBala')
 
