Add get platform libs from mvn resolver to JBallerinaBackend

--- a/compiler/ballerina-lang/build.gradle
+++ b/compiler/ballerina-lang/build.gradle
@@ -24,8 +24,8 @@ dependencies {
     implementation project(':ballerina-cli-module')
     implementation project(':toml-parser')
     implementation project(':central-client')
+    implementation project(':maven-resolver')
     implementation 'com.moandjiezana.toml:toml4j'
-    implementation 'org.apache.commons:commons-lang3'
     implementation 'org.apache.commons:commons-compress:1.18'
     implementation 'io.netty:netty-buffer'
     implementation 'org.ow2.asm:asm'
