--- a/.github/workflows/publish_nballerina_release.yml
+++ b/.github/workflows/publish_nballerina_release.yml
@@ -1,6 +1,9 @@
-name: Publish release
+name: Publish release of nBallerina
 
 on:
+  push:
+    branches:
+      - nballerina
   workflow_dispatch:
 
 jobs:
@@ -8,14 +11,33 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '8.x'
+
+      - name: Initialize sub-modules
+        run: git submodule update --init
+
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+
+      - name: Cache Gradle packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ github.sha }}
+          restore-keys: ${{ runner.os }}-gradle
+
       - name: Set version env variable
         run: echo "VERSION=$((grep -w 'version' | cut -d= -f2) < gradle.properties | rev | cut --complement -d- -f1 | rev)" >> $GITHUB_ENV
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
       - name: Publish artifact
         env:
           packageUser: ${{ secrets.BALLERINA_BOT_USERNAME }}
