--- a/.github/workflows/nballerina_publish.yml
+++ b/.github/workflows/nballerina_publish.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   publish-release:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/nballerina'
     steps:
       - uses: actions/checkout@v2
 
