Do not allow table constraint to be non-mapping type

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1275,7 +1275,7 @@ error.error.type.expected = \
   type ''{0}'' not allowed here; expected an ''error'' or a subtype of ''error''.
 
 error.invalid.table.constraint.subtype = \
-  invalid constraint type. expected subtype of ''map<any|error>'' but ''{0}''
+  invalid constraint type. expected subtype of ''map<any|error>'' but found ''{0}''
 
 error.table.key.specifier.mismatch = \
   table key specifier mismatch. expected: ''{0}'' but found ''{1}''
