--- a/ballerina-shell/modules/shell-cli/src/main/resources/shell.properties
+++ b/ballerina-shell/modules/shell-cli/src/main/resources/shell.properties
@@ -30,8 +30,8 @@ commands.debug=/debug
 commands.vars=/vars
 commands.imports=/imports
 commands.dclns=/dclns
-commands.file=/file
-commands.delete=/delete
+commands.file=/open
+commands.delete=/remove
 commands.help.ps.description=description
 commands.help.ps.example=example
 help.description.url=https://raw.githubusercontent.com/ballerina-platform/ballerina-distribution/master/examples/%s/%s.description
