--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -658,6 +658,9 @@ error.cannot.update.xml.sequence=\
 error.operation.does.not.support.xml.navigation.access=\
   invalid operation: type ''{0}'' does not support xml navigation access
 
+error.invalid.function.invocation.type=\
+  type ''{0}'' cannot be used to invoke function
+
 error.invalid.xml.ns.interpolation=\
   xml namespaces cannot be interpolated
 
