Migrate ballerina obs from opentracing to opentelemetry

--- a/observelib/observe/build.gradle
+++ b/observelib/observe/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     implementation project(':ballerina-config')
     implementation project(':ballerina-runtime')
     implementation project(':metrics-extensions:ballerina-metrics-extension')
-    implementation 'io.opentracing:opentracing-api'
+    implementation 'io.opentelemetry:opentelemetry-api'
 
     testRuntime 'org.slf4j:slf4j-jdk14'
 
