--- a/observelib/observe-internal/build.gradle
+++ b/observelib/observe-internal/build.gradle
@@ -25,8 +25,7 @@ dependencies {
     implementation project(':ballerina-config')
     implementation project(':ballerina-runtime')
     implementation project(':ballerina-observability')
-    implementation 'io.opentracing:opentracing-api'
-    implementation 'io.opentracing:opentracing-noop'
+    implementation 'io.opentelemetry:opentelemetry-api'
 
     distributionBala project(path: ':ballerina-observability', configuration: 'distributionBala')
 }
