--- a/tests/observability-test-utils/build.gradle
+++ b/tests/observability-test-utils/build.gradle
@@ -37,7 +37,9 @@ dependencies {
     shadow project(':ballerina-lang:annotations')
 
     implementation 'io.netty:netty-codec-http'
-    implementation 'io.opentracing:opentracing-mock'
+    implementation 'io.opentelemetry:opentelemetry-api'
+    implementation 'io.opentelemetry:opentelemetry-sdk-trace'
+    implementation 'io.opentelemetry:opentelemetry-sdk-testing'
     implementation project(':ballerina-runtime')
     implementation project(':ballerina-lang:jballerina.java')
 
