Refactor error messages

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -655,11 +655,12 @@ error.invalid.namespace.declaration=\
 error.cannot.update.xml.sequence=\
   cannot update an xml sequence
 
-error.operation.does.not.support.xml.navigation.access=\
-  invalid operation: type ''{0}'' does not support xml navigation access
+error.type.does.not.support.xml.navigation.access=\
+  invalid operation: union type ''{0}'' does not support xml navigation access
 
-error.invalid.function.invocation.type=\
-  type ''{0}'' cannot be used to invoke function
+error.xml.function.does.not.support.argument.type=\
+  xml langlib functions does not support union types as their arguments
+
 
 error.invalid.xml.ns.interpolation=\
   xml namespaces cannot be interpolated
