--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,14 @@ plugins {
     id "com.github.johnrengelman.shadow" version "5.0.0"
     id 'maven-publish'
     id 'net.researchgate.release' version '2.6.0'
+    id 'jacoco'
+}
+
+repositories {
+    mavenLocal()
+    maven {
+        url = 'https://maven.wso2.org/nexus/content/groups/wso2-public/'
+    }
 }
 
 allprojects {
@@ -71,3 +79,64 @@ dependencies {
         //implementation 'org.springframework:spring-web:5.0.2.RELEASE'
     }
 }
+
+def classFilesArray = []
+def execFilesArray = []
+
+task copyJavaClassFiles {
+    subprojects.forEach { subproject -> 
+        def execFile = new File("${subproject.buildDir}/jacoco/jacoco.exec")
+        if(execFile.exists()){
+            execFilesArray.push(execFile)
+            fileTree("${subproject.buildDir}/classes").matching{
+                exclude '**/test/*'
+                exclude '**/module-info.class'
+                include '**/*.class'
+            }.each{file->classFilesArray .push(file)}
+        }
+    }
+}
+
+task copyBallerinaClassFiles {
+    subprojects.forEach { subproject -> 
+    def ballerinaSourceDirectory = new File("${subproject.buildDir}/ballerina-src")
+        if(ballerinaSourceDirectory.exists() && subproject.projectDir.getParentFile().getName() == "langlib") {
+            fileTree("${subproject.buildDir}/ballerina-src/target").include("**/*.zip").forEach { zip ->
+                def jarFiles = zipTree(zip).matching { include '**/*.jar' } 
+                jarFiles.forEach { jar ->
+                    zipTree(jar).matching {
+                        exclude '**/tests/*'
+                        exclude '**/$_init.class'
+                        exclude '**/$value$Caller.class'
+                        exclude '**/$value$Detail.class'
+                        exclude '**/$value$DetailType.class'
+                        exclude '**/$value$EmptyIterator.class'
+                        exclude '**/$value$$anonType$_6.class'
+                        exclude '**/$value$$anonType$_*.class'
+                        exclude '**/$value$_Frame.class'
+                        include '**/*.class'
+                    }
+                    .each { file->
+                    classFilesArray .push(file) }
+                }
+            }
+        }
+    }
+}
+
+task createCodeCoverageReport(type: JacocoReport) {
+    executionData files(execFilesArray)
+    additionalClassDirs files(classFilesArray )
+    reports {
+        xml.enabled = true
+        html.enabled = true
+        xml.destination = new File("${rootDir}/.jacoco/reports/jacoco/report.xml")
+        html.destination = new File("${rootDir}/.jacoco/reports/jacoco/report.html")
+    }
+    onlyIf = {
+        true
+    }
+}
+
+copyBallerinaClassFiles.dependsOn copyJavaClassFiles 
+createCodeCoverageReport.dependsOn copyBallerinaClassFiles 
