--- a/.github/workflows/CI_publish_snapshots.yml
+++ b/.github/workflows/CI_publish_snapshots.yml
@@ -28,7 +28,7 @@ jobs:
                     packageUser: ${{ secrets.BALLERINA_BOT_USERNAME }}
                     packagePAT: ${{ secrets.BALLERINA_BOT_TOKEN }}
                 run: |
-                    ./gradlew clean build ::createCodeCoverageReport -x createJavadoc --scan publish --continue --rerun-tasks
+                    ./gradlew clean build createCodeCoverageReport -x createJavadoc --scan publish --continue --rerun-tasks
                     
             -   name: Generate Codecov Report
                 uses: codecov/codecov-action@v1
