--- a/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
+++ b/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
@@ -288,3 +288,4 @@ error.additional.positional.arg.in.error.constructor=additional positional arg i
 error.missing.arg.within.parenthesis=missing arg within parenthesis
 error.missing.positional.arg.in.error.constructor=missing positional arg in error constructor
 error.open.record.cannot.contain.rest.field=open record cannot contain rest field
+error.module.level.complex.variable.must.be.initialized=module level complex variable must be initialized
