--- a/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
+++ b/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
@@ -300,3 +300,4 @@ error.additional.positional.arg.in.error.constructor=additional positional arg i
 error.missing.arg.within.parenthesis=missing arg within parenthesis
 error.missing.positional.arg.in.error.constructor=missing positional arg in error constructor
 error.open.record.cannot.contain.rest.field=open record cannot contain rest field
+error.isolated.var.cannot.be.declared.as.public=isolated variable cannot be declared as public
