Improve intersection validation
for record default values

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -147,6 +147,9 @@ error.invalid.readonly.intersection.type=\
 error.invalid.readonly.object.intersection.type=\
   invalid intersection type: cannot have a ''readonly'' intersection with a ''readonly object''
 
+error.intersection.not.allowed.with.type=\
+  invalid intersection: field ''{1}'' contains a default value in type ''{0}''
+
 error.invalid.readonly.object.type=\
   invalid ''readonly object'' ''{0}'': cannot have fields that are never ''readonly''
 
