--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1170,14 +1170,14 @@ error.invalid.usage.of.keyword=\
 
 # Variable Reference Errors
 
-error.invalid.tuple.binding.pattern=\
-  invalid tuple binding pattern; member variable count mismatch with member type count
+error.invalid.list.binding.pattern=\
+  invalid list binding pattern; member variable count mismatch with member type count
 
 error.invalid.type.for.tuple.var.expr=\
   invalid tuple variable; expecting a tuple type but found ''{0}'' in expression
 
-error.invalid.tuple.binding.pattern.decl=\
-  invalid tuple binding pattern: expected a tuple type, but found ''{0}''
+error.invalid.list.binding.pattern.decl=\
+  invalid list binding pattern: expected a list type, but found ''{0}''
 
 error.invalid.list.binding.pattern.inference=\
   invalid list binding pattern: attempted to infer a list type, but found ''{0}''
