Divide the action gradle task into two seperate lines

--- a/.github/workflows/CI_publish_snapshots.yml
+++ b/.github/workflows/CI_publish_snapshots.yml
@@ -28,10 +28,13 @@ jobs:
                     packageUser: ${{ secrets.BALLERINA_BOT_USERNAME }}
                     packagePAT: ${{ secrets.BALLERINA_BOT_TOKEN }}
                 run: |
-                    ./gradlew clean build createCodeCoverageReport -x createJavadoc --scan publish --continue --rerun-tasks
+                    ./gradlew clean build -x createJavadoc --scan publish --continue --rerun-tasks
+                    ./gradlew createCodeCoverageReport
                     
             -   name: Generate Codecov Report
                 uses: codecov/codecov-action@v1
+                with:
+                    files: ./.jacoco/reports/jacoco/report.xml
 
             -   name: Trigger Standard Library Module Builds
                 run: |
