--- a/.github/workflows/daily_build.yml
+++ b/.github/workflows/daily_build.yml
@@ -33,7 +33,15 @@ jobs:
           export DISPLAY=':99.0'
           /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
           ./gradlew build -x createJavadoc -x test --max-workers=2 --scan --no-daemon
-          find ~/.gradle/caches/ -name "*.lock" -type f -delete 
+          find ~/.gradle/caches/ -name "*.lock" -type f -delete
+      - name: Notify failure
+          if: ${{ failure() }}
+          run: |
+            curl \
+            -X POST 'https://chat.googleapis.com/v1/spaces/${{secrets.BALLERINA_CHAT_ID}}/messages?key=${{secrets.BALLERINA_CHAT_KEY}}&token=${{secrets.BALLERINA_CHAT_TOKEN}}' \
+            --header 'Content-Type: application/json' \
+            -d '{"text": "*ballerina-lang daily build failure* \nPlease \n visit <https://github.com/ballerina-platform/ballerina-lang/actions?query=workflow%3A%22Daily+build%22|the daily build page> for more information"}'
+
 
   run_integration_test:
     name: Run integration tests
