Update parsing logic for public var Invalidate `public` with `var`, Allow `public` qual with `isolated` types

--- a/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
+++ b/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
@@ -302,3 +302,4 @@ error.missing.positional.arg.in.error.constructor=missing positional arg in erro
 error.open.record.cannot.contain.rest.field=open record cannot contain rest field
 error.complex.variable.must.be.initialized=complex variable must be initialized
 error.isolated.var.cannot.be.declared.as.public=isolated variable cannot be declared as public
+error.variable.declared.with.var.cannot.be.public=variable declared with var cannot be public
