--- a/bvm/ballerina-runtime/build.gradle
+++ b/bvm/ballerina-runtime/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     }
     implementation 'org.apache.commons:commons-lang3'
     implementation 'io.opentelemetry:opentelemetry-api'
+    implementation 'io.opentelemetry:opentelemetry-context'
     implementation ('org.awaitility:awaitility') {
         exclude group: 'org.hamcrest', module: 'hamcrest-core'
     }
