Add suggested changes

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1184,7 +1184,7 @@ error.invalid.type.for.tuple.var.expr=\
   invalid tuple variable; expecting a tuple type but found ''{0}'' in expression
 
 error.invalid.list.binding.pattern.decl=\
-  invalid list binding pattern: expected a list type, but found ''{0}''
+  invalid list binding pattern: expected an array or a tuple, but found ''{0}''
 
 error.invalid.list.binding.pattern.inference=\
   invalid list binding pattern: attempted to infer a list type, but found ''{0}''
