Refactor iterator name to iterable

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -683,7 +683,7 @@ error.iterable.not.supported.collection=\
   incompatible types: ''{0}'' is not an iterable collection
 
 error.incompatible.iterator.function.signature=\
-  iterable objects must have a iterator function with signature, ' \
+  iterable objects must have an iterator method with signature, ' \
   public function iterator() returns (object { public function next () returns (record {| T value; |}?); })';
 
 error.iterable.not.supported.operation=\
@@ -1680,7 +1680,7 @@ error.continue.not.allowed=continue not allowed here
 error.break.not.allowed=break not allowed here
 
 error.invalid.iterable.type=\
-  invalid iterable type ''{1}'': an iterable object must be subtypes of ''{0}''
+  invalid iterable type ''{1}'': an iterable object must be a subtype of ''{0}''
 
 error.invalid.iterable.completion.type.in.foreach.next.function=\
   invalid completion type ''{0}'' in foreach statement: next method completion type cannot contain type ''{1}''
