Validate inferred typedesc value against expected type

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1535,6 +1535,9 @@ error.invalid.param.type.for.return.type=\
 error.invalid.typedesc.param=\
   default value for a ''typedesc'' parameter used in the return type should be a reference to a type
 
+error.incompatible.type.for.inferred.typedesc.value=\
+  incompatible type for parameter ''{0}'' with inferred typedesc value: expected ''{1}'', found ''{2}''
+
 error.invalid.raw.template.type=\
   invalid literal for type ''{1}'': raw templates can only be assigned to abstract subtypes of ''{0}''
 
