Disallow more than one infer typedesc param

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1538,6 +1538,9 @@ error.invalid.typedesc.param=\
 error.incompatible.type.for.inferred.typedesc.value=\
   incompatible type for parameter ''{0}'' with inferred typedesc value: expected ''{1}'', found ''{2}''
 
+error.multiple.infer.typedesc.params=\
+  cannot have more than one defaultable parameter with an inferred typedesc default
+
 error.invalid.raw.template.type=\
   invalid literal for type ''{1}'': raw templates can only be assigned to abstract subtypes of ''{0}''
 
