Require dependently-typed union member basic types to be distinct
This applies when the relevant arg may be inferred.

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1541,6 +1541,10 @@ error.incompatible.type.for.inferred.typedesc.value=\
 error.multiple.infer.typedesc.params=\
   cannot have more than one defaultable parameter with an inferred typedesc default
 
+error.invalid.dependently.typed.return.type.with.inferred.typedesc.param=\
+  invalid return type: members of a dependently-typed union type with an inferred typedesc parameter should have \
+  disjoint basic types
+
 error.invalid.raw.template.type=\
   invalid literal for type ''{1}'': raw templates can only be assigned to abstract subtypes of ''{0}''
 
