--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -543,14 +543,14 @@ error.cannot.update.final.object.field=\
 error.underscore.not.allowed=\
   underscore is not allowed here
 
-error.expression.does.not.support.index.access=\
-  invalid expression: ''{0}'' does not support index access
+error.expression.does.not.support.member.access=\
+  invalid expression: ''{0}'' does not support member access
 
 error.expression.does.not.support.field.access=\
   invalid expression: ''{0}'' does not support field access
 
-error.operation.does.not.support.indexing=\
-  invalid operation: type ''{0}'' does not support indexing
+error.operation.does.not.support.member.access=\
+  invalid operation: type ''{0}'' does not support member access
 
 error.operation.does.not.support.field.access=\
   invalid operation: type ''{0}'' does not support field access
@@ -567,20 +567,20 @@ error.operation.does.not.support.field.access.for.non.required.field=\
 error.operation.does.not.support.optional.field.access.for.field=\
   invalid operation: type ''{0}'' does not support optional field access for field ''{1}''
 
-error.operation.does.not.support.index.access.for.assignment=\
+error.operation.does.not.support.member.access.for.assignment=\
   invalid operation: type ''{0}'' does not support member access for assignment
 
-error.invalid.index.expr.struct.field.access=\
-  invalid index expression: expected string literal
+error.invalid.member.access.expr.struct.field.access=\
+  invalid member access expression: expected string literal
 
-error.invalid.index.expr.tuple.field.access=\
-  invalid index expression: expected integer literal
+error.invalid.member.access.expr.tuple.field.access=\
+  invalid member access expression: expected integer literal
 
-error.invalid.tuple.index.expr=\
-  invalid tuple index expression: value space ''{0}'' out of range
+error.invalid.tuple.member.access.expr=\
+  invalid tuple member access expression: value space ''{0}'' out of range
 
-error.invalid.record.index.expr=\
-  invalid record index expression: value space ''{0}'' out of range
+error.invalid.record.member.access.expr=\
+  invalid record member access expression: value space ''{0}'' out of range
 
 error.invalid.enum.expr=\
   invalid expression: expected enum type name ''{0}''
@@ -675,9 +675,9 @@ error.method.invocation.in.xml.navigation.expressions.not.supported=\
 error.deprecated.xml.attribute.access.expression=\
   deprecated xml attribute access expression, use field access expression instead
 
-error.indexing.within.xml.navigation.expression.not.supported=\
-  index operations are not yet supported within XML navigation expressions, use a grouping expression \
-  (parenthesis) if you intend to index the result of the navigation expression.
+error.member.access.within.xml.navigation.expression.not.supported=\
+  member access operations are not yet supported within XML navigation expressions, use a grouping expression \
+  (parenthesis) if you intend to member-access the result of the navigation expression.
 
 error.iterable.not.supported.collection=\
   incompatible types: ''{0}'' is not an iterable collection
@@ -1166,11 +1166,11 @@ error.invalid.sort.array.member.type=\
 error.sealed.array.type.not.initialized=\
   invalid usage of sealed type: array not initialized
 
-error.invalid.list.index.expr=\
-  invalid list index expression: value space ''{0}'' out of range
+error.invalid.list.member.access.expr=\
+  invalid list member access expression: value space ''{0}'' out of range
 
-error.invalid.array.index.expr=\
-  invalid array index expression: value space ''{0}'' out of range
+error.invalid.array.member.access.expr=\
+  invalid array member access expression: value space ''{0}'' out of range
 
 error.invalid.usage.of.keyword=\
   illegal usage of keyword ''{0}''
