--- a/tests/jballerina-integration-test/src/test/resources/configurables/configurableProject/Config.toml
+++ b/tests/jballerina-integration-test/src/test/resources/configurables/configurableProject/Config.toml
@@ -24,20 +24,17 @@ username = "alice"
 id = 11
 password="password1"
 scopes=["write"]
-isAdmin = false
 
 [[main.users]]
 username = "bob"
 id = 22
 password="password2"
 scopes=["write", "read"]
-isAdmin = false
 
 [[main.users]]
 username = "john"
 id = 33
 password="password3"
-isAdmin = false
 
 [[main.nonKeyUsers]]
 username = "alice"
@@ -71,6 +68,7 @@ name = "tom"
 
 [[main.people]]
 name = "alice"
+address = "London"
 age = 22
 
 [[main.people]]
