Update outdated sealed keyword as closed

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -469,7 +469,7 @@ error.invalid.field.name.record.lit=\
   invalid field name ''{0}'' in type ''{1}''
 
 error.rest.field.not.allowed=\
-  rest field not allowed in sealed records
+  rest field not allowed in closed records
 
 error.open.record.constraint.not.allowed=\
   incompatible types: 'json' cannot be constrained with open record type ''{0}''
@@ -1140,7 +1140,7 @@ error.invalid.type.new.literal=\
   invalid usage of ''new'' with type ''{0}''
 
 error.mismatching.array.literal.values=\
-  size mismatch in sealed array. expected ''{0}'', but found ''{1}''
+  size mismatch in closed array. expected ''{0}'', but found ''{1}''
 
 error.index.out.of.range=\
   index out of range: index: ''{0}''
@@ -1154,8 +1154,8 @@ error.list.index.out.of.range=\
 error.array.index.out.of.range=\
   array index out of range: index: ''{0}'', size: ''{1}''
 
-error.sealed.array.type.can.not.infer.size=\
-  invalid usage of sealed type: can not infer array size
+error.closed.array.type.can.not.infer.size=\
+  invalid usage of closed type: can not infer array size
 
 error.invalid.key.func.return.type=\
   invalid sort key function return type: ''{0}'' is not an ordered type
@@ -1163,8 +1163,8 @@ error.invalid.key.func.return.type=\
 error.invalid.sort.array.member.type=\
   invalid member type of the array/tuple to sort: ''{0}'' is not an ordered type
 
-error.sealed.array.type.not.initialized=\
-  invalid usage of sealed type: array not initialized
+error.closed.array.type.not.initialized=\
+  invalid usage of closed type: array not initialized
 
 error.invalid.list.member.access.expr=\
   invalid list member access expression: value space ''{0}'' out of range
@@ -1406,8 +1406,8 @@ error.missing.error.detail.arg=\
 error.invalid.error.detail.arg.type=\
   invalid arg type in error detail field ''{0}'', expected ''{1}'', found ''{2}''
 
-error.unknown.error.detail.arg.to.sealed.detail=\
-  unknown error detail arg ''{0}'' passed to sealed error detail type ''{1}''
+error.unknown.error.detail.arg.to.closed.detail=\
+  unknown error detail arg ''{0}'' passed to closed error detail type ''{1}''
 
 error.invalid.error.detail.rest.arg=\
   invalid error detail rest arg ''{0}'' passed to open detail record ''{1}''
