--- a/.github/workflows/daily_build.yml
+++ b/.github/workflows/daily_build.yml
@@ -1,13 +1,12 @@
 name: Ballerina daily build
 
 on:
-  workflow_dispatch:
   schedule:
     - cron:  '0 */12 * * *'
 
 jobs:
   ubuntu_build:
-    name: Build without tests on Ubuntu
+    name: Build with tests on Ubuntu
     runs-on: ubuntu-latest
     timeout-minutes: 75
 
