Fix review suggestions

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -689,8 +689,8 @@ error.incompatible.iterator.function.signature=\
 error.iterable.not.supported.operation=\
   operation ''{0}'' does not support given collection type
 
-error.empty.closed.record.cannot.be.iterated=\
-  empty closed record cannot be iterated
+error.cannot.iterate.a.closed.record.with.no.fields=\
+  cannot iterate a closed record with no fields
 
 error.iterable.too.many.variables=\
   too many variables are defined for iterable type ''{0}''
