--- a/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
+++ b/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
@@ -301,3 +301,4 @@ error.missing.arg.within.parenthesis=missing arg within parenthesis
 error.missing.positional.arg.in.error.constructor=missing positional arg in error constructor
 error.open.record.cannot.contain.rest.field=open record cannot contain rest field
 error.complex.variable.must.be.initialized=complex variable must be initialized
+error.field.binding.pattern.inside.list.binding.pattern=field binding pattern inside list binding pattern
