--- a/settings.gradle
+++ b/settings.gradle
@@ -119,6 +119,7 @@ include(':debug-adapter:debug-adapter-cli')
 include(':debug-adapter:debug-adapter-runtime')
 include(':formatter:formatter-core')
 include(':formatter:formatter-cli')
+include(':project-api-test-artifact:event-logger-compiler-plugin')
 //include(':ballerina-libs')
 include(':bir-spec')
 project(':ballerina-tools-api').projectDir = file('compiler/ballerina-tools-api')
@@ -126,6 +127,7 @@ project(':ballerina-parser').projectDir = file('compiler/ballerina-parser')
 project(':ballerina-compiler-api-test').projectDir = file('tests/ballerina-compiler-api-test')
 project(':ballerina-lang').projectDir = file('compiler/ballerina-lang')
 project(':project-api-test').projectDir = file('project-api/project-api-test')
+project(':project-api-test-artifact:event-logger-compiler-plugin').projectDir = file('project-api/test-artifacts/event-logger-compiler-plugin')
 project(':ballerina-lang:internal').projectDir = file('langlib/lang.__internal')
 project(':ballerina-lang:annotations').projectDir = file('langlib/lang.annotations')
 project(':ballerina-lang:jballerina.java').projectDir = file('langlib/jballerina.java')
