Copy new compiler plugin as a test resource

--- a/project-api/project-api-test/build.gradle
+++ b/project-api/project-api-test/build.gradle
@@ -29,6 +29,9 @@ configurations {
     balRt
     testRt
     testCore
+    compilerPluginJar {
+        transitive false
+    }
 }
 
 dependencies {
@@ -40,6 +43,8 @@ dependencies {
     testCompile project(':ballerina-test-utils')
     testCompile project(':ballerina-lang')
     testRuntime project(':ballerina-runtime')
+
+    compilerPluginJar project(':project-api-test-artifact:event-logger-compiler-plugin')
 
     testRuntime project(":ballerina-lang-test")
     balRt project(':ballerina-rt')
@@ -61,8 +66,14 @@ task createTestBre(type: Copy) {
     into "$buildDir/bre/lib"
 }
 
+task copyCompilerPluginJars(type: Copy) {
+    from configurations.compilerPluginJar
+    into "$buildDir/compiler-plugin-jars"
+}
+
 test {
     dependsOn ':ballerina-lang:build'
+    dependsOn copyCompilerPluginJars
     dependsOn createTestDistributionCache
     dependsOn createTestBre
 
