Rework inferring for unions and improve errors

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1545,6 +1545,9 @@ error.invalid.dependently.typed.return.type.with.inferred.typedesc.param=\
   invalid return type: members of a dependently-typed union type with an inferred typedesc parameter should have \
   disjoint basic types
 
+error.cannot.infer.type.for.param=\
+  cannot infer type for param ''{0}''
+
 error.invalid.raw.template.type=\
   invalid literal for type ''{1}'': raw templates can only be assigned to abstract subtypes of ''{0}''
 
