--- a/settings.gradle
+++ b/settings.gradle
@@ -120,6 +120,10 @@ include(':debug-adapter:debug-adapter-runtime')
 include(':formatter:formatter-core')
 include(':formatter:formatter-cli')
 include(':project-api-test-artifact:event-logger-compiler-plugin')
+include(':project-api-test-artifact:compiler-plugin-with-one-dependency')
+include(':project-api-test-artifact:compiler-plugin-with-two-dependencies')
+include(':project-api-test-artifact:string-utils-lib')
+include(':project-api-test-artifact:diagnostic-utils-lib')
 //include(':ballerina-libs')
 include(':bir-spec')
 project(':ballerina-tools-api').projectDir = file('compiler/ballerina-tools-api')
@@ -128,6 +132,10 @@ project(':ballerina-compiler-api-test').projectDir = file('tests/ballerina-compi
 project(':ballerina-lang').projectDir = file('compiler/ballerina-lang')
 project(':project-api-test').projectDir = file('project-api/project-api-test')
 project(':project-api-test-artifact:event-logger-compiler-plugin').projectDir = file('project-api/test-artifacts/event-logger-compiler-plugin')
+project(':project-api-test-artifact:compiler-plugin-with-one-dependency').projectDir = file('project-api/test-artifacts/compiler-plugin-with-one-dependency')
+project(':project-api-test-artifact:compiler-plugin-with-two-dependencies').projectDir = file('project-api/test-artifacts/compiler-plugin-with-two-dependencies')
+project(':project-api-test-artifact:string-utils-lib').projectDir = file('project-api/test-artifacts/string-utils-lib')
+project(':project-api-test-artifact:diagnostic-utils-lib').projectDir = file('project-api/test-artifacts/diagnostic-utils-lib')
 project(':ballerina-lang:internal').projectDir = file('langlib/lang.__internal')
 project(':ballerina-lang:annotations').projectDir = file('langlib/lang.annotations')
 project(':ballerina-lang:jballerina.java').projectDir = file('langlib/jballerina.java')
