Update test resources with the latese changes in compiler plugin loading impl

--- a/project-api/project-api-test/build.gradle
+++ b/project-api/project-api-test/build.gradle
@@ -45,6 +45,10 @@ dependencies {
     testRuntime project(':ballerina-runtime')
 
     compilerPluginJar project(':project-api-test-artifact:event-logger-compiler-plugin')
+    compilerPluginJar project(':project-api-test-artifact:compiler-plugin-with-one-dependency')
+    compilerPluginJar project(':project-api-test-artifact:compiler-plugin-with-two-dependencies')
+    compilerPluginJar project(':project-api-test-artifact:string-utils-lib')
+    compilerPluginJar project(':project-api-test-artifact:diagnostic-utils-lib')
 
     testRuntime project(":ballerina-lang-test")
     balRt project(':ballerina-rt')
