Fix mismatch in DiagnosticsErrorCode and resource bundle

--- a/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
+++ b/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
@@ -269,6 +269,7 @@ error.invalid.expression.statement=invalid expression statement
 error.invalid.array.length=invalid array length
 error.select.clause.in.query.action=select clause in query action
 error.more.clauses.after.select.clause=more clauses after select clause
+error.query.construct.type.in.query.action= query construct type in query action
 error.no.whitespaces.allowed.in.right.shift.op=no whitespaces allowed in right shift op
 error.no.whitespaces.allowed.in.unsigned.right.shift.op=no whitespaces allowed in unsigned right shift op
 error.leading.zeros.in.numeric.literals=leading zeros in numeric literals
