Refactor missing parenthesis error message

--- a/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
+++ b/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
@@ -40,8 +40,8 @@ error.syntax.error=syntax error
 error.missing.token=missing token
 error.missing.semicolon.token=missing semicolon token
 error.missing.colon.token=missing colon token
-error.missing.open.paren.token=missing open paren token
-error.missing.close.paren.token=missing close paren token
+error.missing.open.paren.token=missing open parenthesis token
+error.missing.close.paren.token=missing close parenthesis token
 error.missing.open.brace.token=missing open brace token
 error.missing.close.brace.token=missing close brace token
 error.missing.open.bracket.token=missing open bracket token
