Temporary handle async send as expression

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1672,6 +1672,9 @@ error.invalid.field.in.object.constructor.expr.with.readonly.reference=\
 
 error.multiple.receive.action.not.yet.supported=multiple receive action not yet supported
 
+error.async.send.action.not.yet.supported.as.expression=\
+  async send action not yet supported as expression
+
 error.invalid.readonly.field.type=\
   invalid ''readonly'' field, ''{0}'' can never be ''readonly''
 
