Update compiler plugin test case to report diagnostics

--- a/project-api/test-artifacts/compiler-plugin-with-two-dependencies/build.gradle
+++ b/project-api/test-artifacts/compiler-plugin-with-two-dependencies/build.gradle
@@ -22,6 +22,7 @@ version = '1.0.0'
 
 dependencies {
     implementation project(':ballerina-lang')
+    implementation project(':ballerina-parser')
     implementation project(':ballerina-tools-api')
     implementation project(':project-api-test-artifact:diagnostic-utils-lib')
 }
