Update jar library dependencies of test compiler plugins

--- a/project-api/test-artifacts/compiler-plugin-with-two-dependencies/build.gradle
+++ b/project-api/test-artifacts/compiler-plugin-with-two-dependencies/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation project(':ballerina-parser')
     implementation project(':ballerina-tools-api')
     implementation project(':project-api-test-artifact:diagnostic-utils-lib')
+    implementation project(':project-api-test-artifact:string-utils-lib')
 }
 
 ext.moduleName = 'compiler.plugin.test.plugin.with.two.dependencies'
