--- a/project-api/test-artifacts/compiler-plugin-with-one-dependency/build.gradle
+++ b/project-api/test-artifacts/compiler-plugin-with-one-dependency/build.gradle
@@ -22,7 +22,9 @@ version = '1.0.0'
 
 dependencies {
     implementation project(':ballerina-lang')
-    implementation project(':project-api-test-artifact:string-utils-lib')
+    implementation project(':ballerina-parser')
+    implementation project(':ballerina-tools-api')
+    implementation project(':project-api-test-artifact:diagnostic-utils-lib')
 }
 
 ext.moduleName = 'compiler.plugin.test.plugin.with.one.dependency'
