Add builtin type support

--- a/misc/docerina/build.gradle
+++ b/misc/docerina/build.gradle
@@ -114,6 +114,14 @@ jar {
     }
 }
 
+processResources {
+    include '**/properties'
+    include 'doc-ui/index.html'
+    include 'builtin-types-keywords-descriptions/'
+    include 'release-description.md'
+    filter { String line -> line.replace('${short.version}', "${project.shortVersion}")}
+}
+
 shadowJar {
     configurations = [project.configurations.runtimeClasspath]
     dependencies {
