Fix /file command

--- a/ballerina-shell/modules/shell-cli/src/main/resources/shell.properties
+++ b/ballerina-shell/modules/shell-cli/src/main/resources/shell.properties
@@ -30,7 +30,7 @@ commands.debug=/debug
 commands.vars=/vars
 commands.imports=/imports
 commands.dclns=/dclns
-commands.file=/open
+commands.file=/file
 commands.delete=/remove
 commands.help.ps.description=description
 commands.help.ps.example=example
