--- a/project-api/project-api-test/build.gradle
+++ b/project-api/project-api-test/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compilerPluginJar project(':project-api-test-artifact:compiler-plugin-with-two-dependencies')
     compilerPluginJar project(':project-api-test-artifact:string-utils-lib')
     compilerPluginJar project(':project-api-test-artifact:diagnostic-utils-lib')
+    compilerPluginJar project(':project-api-test-artifact:function-node-analyzer-compiler-plugin')
 
     testRuntime project(":ballerina-lang-test")
     balRt project(':ballerina-rt')
