--- a/settings.gradle
+++ b/settings.gradle
@@ -124,6 +124,7 @@ include(':project-api-test-artifact:compiler-plugin-with-one-dependency')
 include(':project-api-test-artifact:compiler-plugin-with-two-dependencies')
 include(':project-api-test-artifact:string-utils-lib')
 include(':project-api-test-artifact:diagnostic-utils-lib')
+include(':project-api-test-artifact:function-node-analyzer-compiler-plugin')
 //include(':ballerina-libs')
 include(':bir-spec')
 project(':ballerina-tools-api').projectDir = file('compiler/ballerina-tools-api')
@@ -136,6 +137,7 @@ project(':project-api-test-artifact:compiler-plugin-with-one-dependency').projec
 project(':project-api-test-artifact:compiler-plugin-with-two-dependencies').projectDir = file('project-api/test-artifacts/compiler-plugin-with-two-dependencies')
 project(':project-api-test-artifact:string-utils-lib').projectDir = file('project-api/test-artifacts/string-utils-lib')
 project(':project-api-test-artifact:diagnostic-utils-lib').projectDir = file('project-api/test-artifacts/diagnostic-utils-lib')
+project(':project-api-test-artifact:function-node-analyzer-compiler-plugin').projectDir = file('project-api/test-artifacts/function-node-analyzer-compiler-plugin')
 project(':ballerina-lang:internal').projectDir = file('langlib/lang.__internal')
 project(':ballerina-lang:annotations').projectDir = file('langlib/lang.annotations')
 project(':ballerina-lang:jballerina.java').projectDir = file('langlib/jballerina.java')
