Separate builtin types and keywords

--- a/misc/docerina/build.gradle
+++ b/misc/docerina/build.gradle
@@ -117,7 +117,8 @@ jar {
 processResources {
     include '**/properties'
     include 'doc-ui/index.html'
-    include 'builtin-types-keywords-descriptions/'
+    include 'builtin-types-descriptions/'
+    include 'keywords-descriptions/'
     include 'release-description.md'
     filter { String line -> line.replace('${short.version}', "${project.shortVersion}")}
 }
