--- a/settings.gradle
+++ b/settings.gradle
@@ -125,6 +125,7 @@ include(':project-api-test-artifact:compiler-plugin-with-two-dependencies')
 include(':project-api-test-artifact:string-utils-lib')
 include(':project-api-test-artifact:diagnostic-utils-lib')
 include(':project-api-test-artifact:function-node-analyzer-compiler-plugin')
+include(':project-api-test-artifact:bad-sad-compiler-plugin')
 //include(':ballerina-libs')
 include(':bir-spec')
 project(':ballerina-tools-api').projectDir = file('compiler/ballerina-tools-api')
@@ -138,6 +139,7 @@ project(':project-api-test-artifact:compiler-plugin-with-two-dependencies').proj
 project(':project-api-test-artifact:string-utils-lib').projectDir = file('project-api/test-artifacts/string-utils-lib')
 project(':project-api-test-artifact:diagnostic-utils-lib').projectDir = file('project-api/test-artifacts/diagnostic-utils-lib')
 project(':project-api-test-artifact:function-node-analyzer-compiler-plugin').projectDir = file('project-api/test-artifacts/function-node-analyzer-compiler-plugin')
+project(':project-api-test-artifact:bad-sad-compiler-plugin').projectDir = file('project-api/test-artifacts/bad-sad-compiler-plugin')
 project(':ballerina-lang:internal').projectDir = file('langlib/lang.__internal')
 project(':ballerina-lang:annotations').projectDir = file('langlib/lang.annotations')
 project(':ballerina-lang:jballerina.java').projectDir = file('langlib/jballerina.java')
