Allow using null in json related context

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1446,7 +1446,7 @@ error.invalid.use.of.experimental.feature=\
   using experimental feature ''{0}''. use ''--experimental'' flag to enable the experimental features
 
 error.invalid.use.of.null.literal=\
-''null'' literal is only supported for ''json''
+''null'' literal is only allowed in a json-related context
 
 error.type.param.outside.lang.module=\
   typeParam annotation is not supported here
