Improve diagnostic logs

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1552,7 +1552,7 @@ error.invalid.dependently.typed.return.type.with.inferred.typedesc.param=\
   disjoint basic types
 
 error.cannot.infer.type.for.param=\
-  cannot infer type for param ''{0}''
+  cannot infer type for parameter ''{0}''
 
 error.invalid.raw.template.type=\
   invalid literal for type ''{1}'': raw templates can only be assigned to abstract subtypes of ''{0}''
