--- a/gradle.properties
+++ b/gradle.properties
@@ -6,5 +6,5 @@ version=2.0.0-alpha6-SNAPSHOT
 group=org.ballerinalang
 bootstrappedOn=1.1.0-alpha
 shortVersion=slalpha3
-versionDisplayText=Alpha 3
+versionDisplayText=Alpha 3 - SNAPSHOT
 specVersion=v2020-12-17
