Consider function typed vars of T? kind as regular var symbols

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1690,3 +1690,6 @@ error.invalid.readonly.field.type=\
 error.continue.not.allowed=continue not allowed here
 
 error.break.not.allowed=break not allowed here
+
+error.method.call.expr.not.allowed=\
+  method call expression not allowed on field ''{0}'': expected a function type, but found ''{1}''
