Fix error message for invalid method call expr error

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1691,5 +1691,5 @@ error.continue.not.allowed=continue not allowed here
 
 error.break.not.allowed=break not allowed here
 
-error.method.call.expr.not.allowed=\
-  method call expression not allowed on field ''{0}'': expected a function type, but found ''{1}''
+error.invalid.method.call.expr.on.field=\
+  invalid method call expression: expected a function type, but found ''{0}''
