--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -489,11 +489,14 @@ error.cannot.use.type.inclusion.with.more.than.one.open.record.with.different.re
 error.default.values.not.allowed.for.optional.fields=\
   a default value specified for optional field ''{0}''
 
-error.never.type.not.allowed.for.required.fields=\
-  a required field cannot be of type ''never'', define ''{0}'' as an optional field instead
+error.never.type.not.allowed.for.required.and.defaultable.params=\
+  a required parameter or a defaultable parameter cannot be of type ''never'' or equivalent to type ''never''
+
+error.invalid.never.return.typed.client.remote.function=\
+  The return type of a remote method of a client object cannot be of type ''never''
 
 error.never.typed.var.def.not.allowed=\
-  cannot define a variable of type ''never''
+  cannot define a variable of type ''never'' or equivalent to type ''never''
 
 error.too.many.args.call=\
   too many arguments in call to ''{0}()''
@@ -1384,9 +1387,6 @@ error.incompatible.stamp.type=\
 
 error.not.supported.source.for.stamp=\
   stamp function on type ''{0}'' is not supported
-
-error.invalid.never.return.typed.function.invocation=\
-  invalid invocation ''{0}()'': functions/methods returning ''never'' cannot be called in an expression context
 
 error.redeclared.import.module=\
   redeclared import module ''{0}''
