--- a/tests/jballerina-unit-test/build.gradle
+++ b/tests/jballerina-unit-test/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     testCompile project(path: ':ballerina-test-utils', configuration: 'shadow')
     testCompile project(':ballerina-runtime')
 
-    balRuntime project(':ballerina-runtime')
+    balRuntime project(':ballerina-rt')
 
     distributionBala project(path: ':ballerina-observability', configuration: 'distributionBala')
     distributionBala project(path: ':ballerina-observability-internal', configuration: 'distributionBala')
@@ -88,10 +88,10 @@ dependencies {
 
 description = 'JBallerina - Unit Test Module'
 
-//task createBre(type: org.gradle.api.tasks.Copy) {
-//    from configurations.balRuntime
-//    into "$buildDir/bre/lib"
-//}
+task createBre(type: org.gradle.api.tasks.Copy) {
+    from configurations.balRuntime
+    into "$buildDir/bre/lib"
+}
 
 test {
     systemProperty "java.util.logging.config.file", "src/test/resources/logging.properties"
@@ -114,7 +114,7 @@ test {
         }
     }
 
-//    dependsOn createBre
+    dependsOn createBre
 }
 
 configurations {
