Address review suggestions

--- a/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
+++ b/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
@@ -218,7 +218,7 @@ error.missing.xml.atomic.name.pattern=missing xml atomic name pattern
 error.missing.tuple.member=missing tuple member
 error.expression.expected.action.found=action invocation as an expression not allowed here
 error.missing.key.expr.in.member.access.expr=missing key expr in member access expr
-error.configurable.variable.must.be.initialized.or.marked.as.required=configurable variable must be initialized or \
+error.configurable.variable.must.be.initialized.or.required=configurable variable must be initialized or be \
                                                                                                     marked as required
 error.missing.order.key=missing order key in order by clause
 error.missing.resource.path.in.resource.accessor.definition=missing resource path in resource accessor definition
