--- a/project-api/project-api-test/src/test/resources/export_modules/build_project_with_export/Ballerina.toml
+++ b/project-api/project-api-test/src/test/resources/export_modules/build_project_with_export/Ballerina.toml
@@ -6,4 +6,4 @@ license = ["MIT", "Apache-2.0"]
 authors = ["jo@wso2.com", "pramodya@wso2.com"]
 repository = "https://github.com/ballerinalang/ballerina"
 keywords = ["ballerina", "security", "crypto"]
-export = ["winery", "winery.service"]
+export = ["winery", "winery.services"]
