--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -489,8 +489,8 @@ error.default.values.not.allowed.for.optional.fields=\
 error.never.type.not.allowed.for.required.and.defaultable.params=\
   a required parameter or a defaultable parameter cannot be of type ''never'' or equivalent to type ''never''
 
-error.invalid.never.return.typed.client.remote.function=\
-  The return type of a remote method of a client object cannot be of type ''never''
+error.invalid.client.remote.method.call=\
+  cannot call a remote method with return type ''never''
 
 error.never.typed.var.def.not.allowed=\
   cannot define a variable of type ''never'' or equivalent to type ''never''
