Disallow infer-typedesc-default in non-dependently-typed functions

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1544,6 +1544,9 @@ error.invalid.dependently.typed.return.type.with.inferred.typedesc.param=\
 error.cannot.infer.type.for.param=\
   cannot infer type for parameter ''{0}''
 
+error.cannot.use.inferred.typedesc.default.with.unreferenced.param=\
+  cannot use an inferred typedesc default with a parameter on which the return type does not depend on
+
 error.invalid.raw.template.type=\
   invalid literal for type ''{1}'': raw templates can only be assigned to abstract subtypes of ''{0}''
 
