--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1679,6 +1679,9 @@ error.invalid.read.only.class.inclusion.in.non.read.only.class=\
 error.invalid.field.in.object.constructor.expr.with.readonly.reference=\
   invalid field in an object constructor expression with a ''readonly'' reference: ''{0}'' can never be ''readonly''
 
+error.mismatching.visibility.qualifiers.in.object.field=\
+  mismatching visibility qualifiers in referenced object field and referencing object field ''{0}''
+
 error.multiple.receive.action.not.yet.supported=multiple receive action not yet supported
 
 error.async.send.action.not.yet.supported.as.expression=\
