Validate Ballerina.toml in BuildCommand with -c flag

--- a/cli/ballerina-cli/build.gradle
+++ b/cli/ballerina-cli/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation project(':testerina:testerina-runtime')
     implementation project(':maven-resolver')
     implementation project(':ballerina-shell:shell-cli')
+    implementation project(':toml-parser')
 
     testCompile 'org.testng:testng'
     testCompile 'org.mockito:mockito-all'
