Change unnecessary condition always eval to true from error to hint

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1256,9 +1256,6 @@ error.tuple.index.out.of.range=\
 error.incompatible.type.check=\
   incompatible types: ''{0}'' will not be matched to ''{1}''
 
-error.unnecessary.condition=\
-  unnecessary condition: expression will always evaluate to ''true''
-
 # streaming related errors
 
 error.invalid.stream.constructor=\
@@ -1695,12 +1692,12 @@ error.break.not.allowed=\
 
 error.unused.variable.with.inferred.type.including.error=\
   unused variable ''{0}'' with inferred type including error
-
 error.invalid.iterable.type=\
   invalid iterable type ''{0}'': an iterable object must be a subtype of ''{1}''
-
 error.invalid.iterable.completion.type.in.foreach.next.function=\
   invalid completion type ''{0}'' in foreach statement: next method completion type cannot contain type ''{1}''
-
 error.invalid.method.call.expr.on.field=\
   invalid method call expression: expected a function type, but found ''{0}''
+# hints
+hint.unnecessary.condition=\
+  unnecessary condition: expression will always evaluate to ''true''
