--- a/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
+++ b/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
@@ -308,3 +308,4 @@ error.isolated.var.cannot.be.declared.as.public=isolated variable cannot be publ
 error.variable.declared.with.var.cannot.be.public=variable declared with var cannot be public
 error.field.binding.pattern.inside.list.binding.pattern=field binding pattern inside list binding pattern
 error.invalid.expression.expected.a.call.expression = invalid expression, expected a call expression
+error.metadata.not.attached.to.a.top.level.construct= metadata not attached to a top level construct
