--- a/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
+++ b/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
@@ -309,3 +309,4 @@ error.variable.declared.with.var.cannot.be.public=variable declared with var can
 error.field.binding.pattern.inside.list.binding.pattern=field binding pattern inside list binding pattern
 error.invalid.expression.expected.a.call.expression = invalid expression, expected a call expression
 error.metadata.not.attached.to.a.top.level.construct= metadata not attached to a top level construct
+error.metadata.not.attached.to.a.object.member = metadata not attached to a object member
