Revert "Remove configurable support for records"

--- a/tests/jballerina-integration-test/src/test/resources/configurables/negative_tests/config_files/record_field_structure_error.toml
+++ b/tests/jballerina-integration-test/src/test/resources/configurables/negative_tests/config_files/record_field_structure_error.toml
@@ -2,6 +2,6 @@
 stringVar = "required"
 
 [main.testUser]
-username = "Jane"
+username.structure = "Jane"
 password = "password"
 scopes = ["write"]
